--- a/Indo/manifest.json
+++ b/Indo/manifest.json
@@ -2,11 +2,11 @@
 "display_override": ["window-controls-overlay"], 
 "protocol_handlers": [{"protocol":"mailto","url":"/newEmail?to=%s"}], 
 "name": "Indo",
-"short_name": "This name will show in your Windows taskbar, in the start menu, and Android homescreen",
-"start_url": "The URL that should be loaded when your application is opened",
+"short_name": "Indo",
+"start_url": "/app-home",
 "display": "standalone",
 "description": "A description for your application",
-"lang": " The default language of your application",
+"lang": "English",
 "dir": "auto",
 "theme_color": "#000000",
 "background_color": "#000000",
